<resources>
    <string name="app_name">尋找Youbike</string>
    <string name="app_name_debug">ubike debug</string>
    <string name="bottom_map_title">地圖</string>
    <string name="bottom_favorite_title">最愛</string>
    <string name="status_normal">正常營運</string>
    <string name="status_stop">停止營運</string>
    <string name="status_pause">暫停營運</string>
    <string name="available_rent">可借數量：%s</string>
    <string name="available_rent_detail">(電輔車：%s、一般自行車：%s)</string>
    <string name="available_return">可停空位：%s</string>
    <string name="data_update_time">．資料更新時間：%s</string>
    <string name="favorite_list_is_empty">目前沒有任何收藏站點</string>
    <string name="default_dialog_title">訊息</string>
    <string name="submit">確定</string>
    <string name="cancel">取消</string>
    <string name="setting">設置</string>
    <string name="location_permission_hint">允許app使用位置權限，可更快找出附近站點：）</string>
    <string name="error">錯誤</string>
    <string name="error00001">token失效，點擊確定按鈕重新拿取。%s</string>
    <string name="error00002">錯誤代碼：00002\n網路不穩定，確認看看網路是否正常。%s</string>
    <string name="error00003">錯誤代碼：00003\n網路不穩定，確認看看網路是否正常。%s</string>
    <string name="error00004">錯誤代碼：00004\n網路不穩定，確認看看網路是否正常。%s</string>
    <string name="error00005">錯誤代碼：00005\n網路不穩定，確認看看網路是否正常。%s</string>
    <string name="error99999">不明錯誤，%s</string>
    <string name="loading">讀取中..</string>
    <string name="fetch_data_after_secs">%d 秒後更新資料</string>
    <string name="electric_bike">電輔車：</string>
    <string name="status_normal_with_newline">正常\n營運</string>
    <string name="status_stop_with_newline">停止\n營運</string>
    <string name="status_pause_with_newline">暫停\n營運</string>
    <string name="city_taipei">台北市</string>
    <string name="city_newTaipei">新北市</string>
    <string name="city_taoyuan">桃園市</string>
    <string name="city_hsinchu">新竹市</string>
    <string name="city_hsinchuCounty">新竹縣</string>
    <string name="city_miaoliCounty">苗栗縣</string>
    <string name="city_taichung">台中市</string>
    <string name="city_chiayi">嘉義市</string>
    <string name="city_kaohsiung">高雄市</string>
    <string name="city_tainan">台南市</string>
    <string name="city_pingtungCounty">屏東縣</string>
    <string name="city_kinmenCounty">金門縣</string>
    <string name="city_changhua">彰化縣</string>
    <string name="city_taitung">台東縣</string>
    <string name="city_chiayiCounty">嘉義縣</string>
    <string name="city_yunlinCounty">雲林縣</string>
    <string name="added_to_favorite">已加入最愛</string>
    <string name="remove_from_favorite">已移除最愛</string>
    <string name="give_full_permission_hint">點擊給予APP完整位置權限</string>
    <string name="google_map_not_found">無法找到Google Map App</string>

    <!-- translatable = false -->
    <string name="api_fail" translatable="false">api error，%s</string>
    <string name="ubike_1" translatable="false">YouBike 1.0</string>
    <string name="ubike_2" translatable="false">YouBike 2.0</string>
    <string name="tbike" translatable="false">T-Bike</string>
    <string name="pbike" translatable="false">P-Bike</string>
    <string name="kbike" translatable="false">K-Bike</string>
</resources>