<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

    </data>

    <merge
        tools:layout_height="wrap_content"
        tools:layout_width="match_parent"
        tools:orientation="vertical"
        tools:parentTag="android.widget.LinearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_taipei"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_support_city_item"
                android:text="@string/city_taipei"
                android:textSize="15dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_newTaipei"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_support_city_item"
                android:text="@string/city_newTaipei"
                android:textSize="15dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_taoyuan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_support_city_item"
                android:text="@string/city_taoyuan"
                android:textSize="15dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_hsinchu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_support_city_item"
                android:text="@string/city_hsinchu"
                android:textSize="15dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_hsinchuCounty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_support_city_item"
                android:text="@string/city_hsinchuCounty"
                android:textSize="15dp"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_miaoliCounty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_support_city_item"
                android:text="@string/city_miaoliCounty"
                android:textSize="15dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_taichung"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_support_city_item"
                android:text="@string/city_taichung"
                android:textSize="15dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_changhua"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_support_city_item"
                android:text="@string/city_changhua"
                android:textSize="15dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_yunlin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_support_city_item"
                android:text="@string/city_yunlinCounty"
                android:textSize="15dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_chiayi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_support_city_item"
                android:text="@string/city_chiayi"
                android:textSize="15dp"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_chiayiCounty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_support_city_item"
                android:text="@string/city_chiayiCounty"
                android:textSize="15dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_kaohsiung"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_support_city_item"
                android:text="@string/city_kaohsiung"
                android:textSize="15dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_tainan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_support_city_item"
                android:text="@string/city_tainan"
                android:textSize="15dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_pingtungCounty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_support_city_item"
                android:text="@string/city_pingtungCounty"
                android:textSize="15dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_taitung"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_support_city_item"
                android:text="@string/city_taitung"
                android:textSize="15dp"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_give_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_support_city_item"
            android:text="@string/give_full_permission_hint"
            android:visibility="gone"
            tools:visibility="visible" />

    </merge>

</layout>
